curve asset layout allowed to wrap. solves grid going waaaaaaaaaaaaaaaaaaaaay out of screen.

--- a/components/exploreVaultStrategy/exploreVaultStrategy.module.css
+++ b/components/exploreVaultStrategy/exploreVaultStrategy.module.css
@@ -48,6 +48,7 @@
 .curveTokenContainer {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .tokenTitleSection {
