--- a/pages/system/vault/[address]/system.module.css
+++ b/pages/system/vault/[address]/system.module.css
@@ -84,7 +84,7 @@
 
 .strategiesContainer {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   grid-gap: 24px;
 }
 
